# dj-dbcreate

./: .gitignore  README.md  mypy.ini  pyproject.toml
contrib/archlinux/dbcreate/: PKGBUILD
contrib/archlinux/dbcreate-git/: PKGBUILD
contrib/archlinux/dbcreate-local/: .gitignore  PKGBUILD
dbcreate/: __init__.py  __main__.py  cli.py  db.py
dbcreate/utils/: checkplatform.py  checkpsql.py
dbcreate/utils/postgres/: connect.py
tests/: test_db.py
